# gpmp2

./: .gitignore  CMakeLists.txt  gpmp2.i  make.sh
gpmp2/: CMakeLists.txt
gpmp2/kinematics/: Arm.cpp  ForwardKinematics-inl.h  GaussianPriorWorkspacePosition.h  RobotModel-inl.h
gpmp2/obstacle/: SignedDistanceField.h
python/: Arm2FactorGraphExample.py  PointRobot2DFactorGraphExample.py  WAMFactorGraphExample.py
python/utils/: __init__.py  generate2Ddataset.py  generate3Ddataset.py  generateArm.py  plotRobotModel.py  signedDistanceField2D.py  signedDistanceField3D.py
python/wrapper/: pybind_wrapper.tpl.example
